[Breaking-Change] Post model 에 imageUrl 추가 & User model 에 nickname 추가
