# bin/swagger.json
@@ -15,7 +15,7 @@
     }
   },
   "paths": {
-    "/post/create": {
+    "/post": {
       "post": {
         "tags": [
           "post"
@@ -48,7 +48,7 @@
         },
         "summary": "게시글 작성 기능\n\nBody 를 통해 받은 createPostProps( title , content )를 통해 Post를 만든다",
         "description": "게시글 작성 기능\n\nBody 를 통해 받은 createPostProps( title , content )를 통해 Post를 만든다.\n\n@tag post\n@param createPostProps\n@param userId\n@returns",
-        "x-nestia-namespace": "post.create.create",
+        "x-nestia-namespace": "post.create",
         "x-nestia-jsDocTags": [
           {
             "name": "tag",
@@ -82,6 +82,127 @@
           }
         ],
         "x-nestia-method": "POST"
+      },
+      "get": {
+        "tags": [
+          "post"
+        ],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "description": "@minimum 0",
+              "x-typia-metaTags": [
+                {
+                  "kind": "minimum",
+                  "value": 0
+                }
+              ],
+              "x-typia-jsDocTags": [
+                {
+                  "name": "minimum",
+                  "text": [
+                    {
+                      "text": "0",
+                      "kind": "text"
+                    }
+                  ]
+                }
+              ],
+              "x-typia-required": false,
+              "x-typia-optional": true,
+              "type": "number",
+              "minimum": 0
+            },
+            "required": false,
+            "description": "@minimum 0"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "schema": {
+              "description": "@minimum 0",
+              "x-typia-metaTags": [
+                {
+                  "kind": "minimum",
+                  "value": 0
+                }
+              ],
+              "x-typia-jsDocTags": [
+                {
+                  "name": "minimum",
+                  "text": [
+                    {
+                      "text": "0",
+                      "kind": "text"
+                    }
+                  ]
+                }
+              ],
+              "x-typia-required": false,
+              "x-typia-optional": true,
+              "type": "number",
+              "minimum": 0
+            },
+            "required": false,
+            "description": "@minimum 0"
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "schema": {
+              "x-typia-required": false,
+              "x-typia-optional": true,
+              "type": "string",
+              "enum": [
+                "desc",
+                "asc"
+              ]
+            },
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Paginated_lt_ReadPostProps_gt_"
+                }
+              }
+            },
+            "x-nestia-encrypted": false
+          }
+        },
+        "summary": "게시글 목록 조회 기능\n\nQuery 를 통해 받은 Pagination Option 을 통해 , 조건에 맞는 Post id[] 를 받는다",
+        "description": "게시글 목록 조회 기능\n\nQuery 를 통해 받은 Pagination Option 을 통해 , 조건에 맞는 Post id[] 를 받는다.\n\n@tag post\n@param queryParams\n@returns",
+        "x-nestia-namespace": "post.reads",
+        "x-nestia-jsDocTags": [
+          {
+            "name": "tag",
+            "text": [
+              {
+                "text": "post",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "queryParams",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns"
+          }
+        ],
+        "x-nestia-method": "GET"
       }
     },
     "/post/{postId}": {
@@ -293,129 +414,6 @@
         "x-nestia-method": "GET"
       }
     },
-    "/post": {
-      "get": {
-        "tags": [
-          "post"
-        ],
-        "parameters": [
-          {
-            "name": "page",
-            "in": "query",
-            "schema": {
-              "description": "@minimum 0",
-              "x-typia-metaTags": [
-                {
-                  "kind": "minimum",
-                  "value": 0
-                }
-              ],
-              "x-typia-jsDocTags": [
-                {
-                  "name": "minimum",
-                  "text": [
-                    {
-                      "text": "0",
-                      "kind": "text"
-                    }
-                  ]
-                }
-              ],
-              "x-typia-required": false,
-              "x-typia-optional": true,
-              "type": "number",
-              "minimum": 0
-            },
-            "required": false,
-            "description": "@minimum 0"
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "schema": {
-              "description": "@minimum 0",
-              "x-typia-metaTags": [
-                {
-                  "kind": "minimum",
-                  "value": 0
-                }
-              ],
-              "x-typia-jsDocTags": [
-                {
-                  "name": "minimum",
-                  "text": [
-                    {
-                      "text": "0",
-                      "kind": "text"
-                    }
-                  ]
-                }
-              ],
-              "x-typia-required": false,
-              "x-typia-optional": true,
-              "type": "number",
-              "minimum": 0
-            },
-            "required": false,
-            "description": "@minimum 0"
-          },
-          {
-            "name": "order",
-            "in": "query",
-            "schema": {
-              "x-typia-required": false,
-              "x-typia-optional": true,
-              "type": "string",
-              "enum": [
-                "desc",
-                "asc"
-              ]
-            },
-            "required": false
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Paginated_lt_ReadPostProps_gt_"
-                }
-              }
-            },
-            "x-nestia-encrypted": false
-          }
-        },
-        "summary": "게시글 목록 조회 기능\n\nQuery 를 통해 받은 Pagination Option 을 통해 , 조건에 맞는 Post id[] 를 받는다",
-        "description": "게시글 목록 조회 기능\n\nQuery 를 통해 받은 Pagination Option 을 통해 , 조건에 맞는 Post id[] 를 받는다.\n\n@tag post\n@param queryParams\n@returns",
-        "x-nestia-namespace": "post.reads",
-        "x-nestia-jsDocTags": [
-          {
-            "name": "tag",
-            "text": [
-              {
-                "text": "post",
-                "kind": "text"
-              }
-            ]
-          },
-          {
-            "name": "param",
-            "text": [
-              {
-                "text": "queryParams",
-                "kind": "text"
-              }
-            ]
-          },
-          {
-            "name": "returns"
-          }
-        ],
-        "x-nestia-method": "GET"
-      }
-    },
     "/user/register": {
       "post": {
         "tags": [
@@ -551,12 +549,18 @@
             "x-typia-required": true,
             "x-typia-optional": false,
             "type": "string"
+          },
+          "imageUrl": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "string"
           }
         },
         "nullable": false,
         "required": [
           "title",
-          "content"
+          "content",
+          "imageUrl"
         ],
         "x-typia-jsDocTags": []
       },
@@ -597,6 +601,11 @@
             "x-typia-optional": false,
             "type": "string"
           },
+          "imageUrl": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "string"
+          },
           "userId": {
             "x-typia-required": true,
             "x-typia-optional": false,
@@ -607,6 +616,7 @@
         "required": [
           "title",
           "content",
+          "imageUrl",
           "userId"
         ],
         "x-typia-jsDocTags": []
@@ -738,12 +748,18 @@
             "x-typia-required": true,
             "x-typia-optional": false,
             "type": "string"
+          },
+          "nickname": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "string"
           }
         },
         "nullable": false,
         "required": [
           "email",
-          "password"
+          "password",
+          "nickname"
         ],
         "x-typia-jsDocTags": []
       },
