# src/modules/post/commands/create-post/create-post.controller.ts
@@ -21,12 +21,13 @@ export class CreatePostController {
    * @returns
    */
   @UseGuards(AccessTokenGuard)
-  @TypedRoute.Post('create')
+  @TypedRoute.Post()
   async create(
     @TypedBody() createPostProps: CreatePostProps,
     @UserId() userId: string,
   ): Promise<string> {
     const command = new CreatePostCommand({ ...createPostProps, userId });
+
     const result: Result<string, undefined> = await this.commandBus.execute(
       command,
     );
